--- a/src/RobotCenter/view/RobotConnectedGui.form
+++ b/src/RobotCenter/view/RobotConnectedGui.form
@@ -62,7 +62,9 @@
       </component>
       <component id="a9647" class="javax.swing.JComboBox" binding="robotModelLabelComboBox">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
         <properties/>
       </component>
