--- a/src/RobotCenter/view/RobotGui.form
+++ b/src/RobotCenter/view/RobotGui.form
@@ -450,7 +450,7 @@
           </grid>
         </constraints>
       </vspacer>
-      <component id="4d3ad" class="javax.swing.JButton" binding="animationButton">
+      <component id="4d3ad" class="javax.swing.JButton" binding="graphicViewButton">
         <constraints>
           <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="32"/>
@@ -458,7 +458,7 @@
         </constraints>
         <properties>
           <horizontalTextPosition value="0"/>
-          <text value="Show Animation"/>
+          <text value="Graphic View"/>
         </properties>
       </component>
     </children>
