--- a/src/RobotCenter/view/RobotGui.form
+++ b/src/RobotCenter/view/RobotGui.form
@@ -396,7 +396,7 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Speed"/>
+              <text value="Speed [mm/s]"/>
             </properties>
           </component>
           <component id="c38d9" class="javax.swing.JTextField" binding="speedTextField">
