--- a/src/RobotCenter/view/RobotModelGui.form
+++ b/src/RobotCenter/view/RobotModelGui.form
@@ -399,7 +399,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Max Speed"/>
+              <text value="Max Speed [mm/s]"/>
             </properties>
           </component>
           <component id="f5a04" class="javax.swing.JTextField" binding="maxSpeedTextField">
